<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:clickable="true"
        android:focusable="true"
        tools:context="com.github.apartmentfinder.MainActivity">

        <requestFocus/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/data_for_calculation"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleStyle"
                android:maxLines="1"
                android:text="@string/apart_number"/>

            <EditText
                android:id="@+id/etApartmentNumber"
                style="@style/EditTextValueStyle"
                android:hint="@string/enter_value"
                android:imeActionId="@+id/etFloorCount"
                android:imeOptions="actionNext"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleStyle"
                android:maxLines="1"
                android:text="@string/floor_count"/>

            <EditText
                android:id="@+id/etFloorCount"
                style="@style/EditTextValueStyle"
                android:hint="@string/enter_value"
                android:imeActionId="@+id/etApartmentsOnFloorCount"
                android:imeOptions="actionNext"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleStyle"
                android:text="@string/aparnt_on_floor"/>

            <EditText
                android:id="@+id/etApartmentsOnFloorCount"
                style="@style/EditTextValueStyle"
                android:hint="@string/enter_value"
                android:imeActionId="@+id/etFloorCount"
                android:imeOptions="actionNext"/>
        </LinearLayout>

        <Button
            android:id="@+id/btCalculation"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/bt_calc"/>

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

    </LinearLayout>
</ScrollView>
